--- a/index.hbs
+++ b/index.hbs
@@ -1,16 +1,17 @@
-<html>
+ {{>header}}
+  <article>
 
-<head>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-    {{>header}}
-    <h1>Home page from html</h1>
-     <p>{{home}}</p>
-    <p>{{title}}</p>
-    <p>{{messege}}</p>
-    <p>{{name}}</p>
-    {{>footer}}
-  
-</body>
-</html>
+      <div class="cardA">
+          <p>{{#each data}}
+          <div class="card" style="width: 18rem;">
+      <img src="{{this.urlToImage}}" class="card-img-top" alt="...">
+      <div class="card-body">
+       <h5 class="card-title">{{this.title}}</h5>
+    <p class="card-text">{{this.description}}</p>
+  </div>
+</div>
+{{/each}}</p>
+      </div>
+      
+  </article>
+{{>footer}}
