--- a/footer.hbs
+++ b/footer.hbs
@@ -1,1 +1,9 @@
-<p class="foot">Create BY {{name}}</p>
+<html>
+
+<head>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<p class="foot">Create BY PETER SAMY ADEEB</p>
+</body>
+</html>
