--- a/header.hbs
+++ b/header.hbs
@@ -1,6 +1,14 @@
+<html>
+
+<head>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
 <h1>{{title}}</h1>
 <div style="background-color: aqua;">
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="/help">Help</a>
+    
 </div>
+</body>
+</html>
